2.3.0 | ??-???-????
===================
    - added assign variables action = .Now it's possible to assign and override variables inside nexl expressions
    - added separator action ;
    - added inverted object property resolution action %
    - nexl.functions.system renamed to nexl.funcs.sys ( nexl.functions.system is left for backward compatibility )
    - nexl.functions.user renamed to nexl.funcs.usr ( nexl.functions.user is left for backward compatibility )
    - inc(), dec(), div(), mult(), mod() functions now can accept multiple arguments
    - added keyVals() nexl system function to resolve key+value pairs from object
    - added concat() nexl system function to concat primitives, array and objects. Function accepts multiple arguments
    - added updAt(), insAt(), delAt() nexl system function to update/insert/delete array elements and strings
    - added keys() and vals() nexl system functions to retrieve keys and values from object at specified level
    - added obj() and arr() nexl system functions to create objects and array from multiple arguments
    - setObjKey() function renamed to setKey()
    - setObjVal() function renamed to setVal()
    - fixed nexl expressions deep resolution bug ( affects to iterations )
    - fixed bug in ^S action. Expression deep resolution was missed
    - fixed bug in !U action for arrays. Undefined value was eliminated instead just be undefined
    - fixed arrays and objects resolution bug ( every time was created a new instance of arrays and objects )

2.2.1 | 26-MAY-2017
===================
    - updated release date

2.2.0 | 26-MAY-2017
===================
    - implemented iteration over array elements and object fields in nexl expression as []
    - added new virtual variables to access iteration session : _item_, _index_, _key_, _value_
    - extended + action to concat strings
    - added stringify action ^S