@@ -86,7 +86,8 @@ const OBJECT_OPERATIONS_OPTIONS = {
 	'CONVERT_TO_OBJECT': 'O',
 	'PRODUCE_XML': 'X',
 	'PRODUCE_YAML': 'Y',
-	'PRODUCE_KEY_VALUE_PAIRS': 'P'
+	'PRODUCE_KEY_VALUE_PAIRS': 'P',
+	'CLONE_OBJECT': 'CL'
 };
 
 const ARRAY_OPERATIONS_OPTIONS = {
@@ -96,7 +97,8 @@ const ARRAY_OPERATIONS_OPTIONS = {
 	'DUPLICATES': 'D',
 	'LENGTH': 'LEN',
 	'CONVERT_TO_ARRAY': 'A',
-	'GET_FIRST_OR_NOTHING': 'F'
+	'GET_FIRST_OR_NOTHING': 'F',
+	'CLONE_ARRAY': 'CL'
 };
 
 const STRING_OPERATIONS_OPTIONS = {
